# authentication-server-prototype

./: README.md
auth-client/: Cargo.toml
auth-client/src/: main.rs
auth-lib/: Cargo.toml
auth-lib/src/: db.rs  lib.rs  net.rs  printing.rs
auth-lib/src/net/: packets.rs
auth-server/: Cargo.toml
auth-server/src/: db.rs  lib.rs  main.rs  net.rs  test_database.rs
