[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-lib = { path = "../auth-lib" }
serde = { version = "1.0.149", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
serde_bytes = "0.11.7"