[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-lib = { path = "../auth-lib" }

serde = { version = "1.0.149", features = ["derive"] }
bincode = "1.3.3"

sha2 = "0.10.6"
# cfg-if = "1.0.0"
# cpufeatures = "0.2.5"
# digest = "0.10.6"
base64 = "0.13.1"

chrono = "0.4.23"

[dev-dependencies]
serde_bytes = "0.11.7"

digest = "0.10.6"
hex-literal = "0.3.4"